# NHI-epub-reader-MacOS

./: .dockerignore  App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  server.js  types.ts
components/: AnalysisTool.tsx  LedgerView.tsx  LessonPlannerPanel.tsx  Library.tsx  MiniAppMenu.tsx  QuizPanel.tsx  Reader.tsx  SearchPanel.tsx  SettingsModal.tsx  TableOfContents.tsx
docs/: BUILD_LEARNING_LOG.md  BUILD_ORDER.md  CTO_REVIEW_PACKET.md  LEARNING_LESSONS.md  PRODUCT_DOCUMENTATION.md
scripts/: build-macos-dmg.mjs
services/: aiService.ts  aiSettingsService.ts  epubService.ts  geminiService.ts  ledgerService.ts  nativeDesktopService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
utils/: sourceTextMode.ts
