[package]
name = "nhi-reader"
version = "0.1.0"
description = "Native macOS EPUB reader with multi-provider AI analysis."
authors = ["Alan Nguyen"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nhi_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-log = "2"
tauri-plugin-store = "2.4.2"
tauri-plugin-stronghold = "2.3.1"
